--- a/Resources/public/css/typography.css
+++ b/Resources/public/css/typography.css
@@ -3,9 +3,39 @@ body
     font-family: arial, sans-serif;
 }
 
-.masthead a
+h1, h2, h3
+{
+    font-weight: 300;
+    font-family: 'Oxygen', sans-serif;
+    margin-bottom: 0.3em;
+}
+
+h1
+{
+    margin-top: 0;
+    font-size: 2.4em;
+}
+
+h2
+{
+    font-size: 1.8em;
+}
+
+h3
+{
+    font-size: 1.4em;
+}
+
+.masthead a,
+.breadcrumbs.main.section a
 {
     text-decoration: inherit;
+}
+
+.breadcrumbs.main.section > .inner > *
+{
+    font-size: 0.8em;
+    text-transform: uppercase;
 }
 
 
