--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -4,4 +4,5 @@
     <h1>Welcome back, my friend!</h1>
 
     <p><a href="{{ path('pengarwin_account') }}">Accounts</a></p>
+    <p><a href="{{ path('pengarwin_vendor') }}">Vendors</a></p>
 {% endblock %}
