Limiting Accounts on account/index to current Organization's

--- a/Resources/views/Account/index.html.twig
+++ b/Resources/views/Account/index.html.twig
@@ -5,7 +5,7 @@
 
     <div class="section">
         {% for account in accounts %}
-            <p><a href="{{ path('pengarwin_account_show', { 'path': account.path }) }}">{{ account.name }}</a></p>
+            <p><a href="{{ path('pengarwin_account_show', { 'path': account.path }) }}">{{ account.segmentation }}</a></p>
         {% endfor %}
     </div><!-- .section -->
 
