Added log out link to footer

--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -36,6 +36,12 @@
         </div><!-- #content.main.section -->
         <div id="footer" class="main section">
             <div class="inner">
+                {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+                    <p>
+                        Logged in as <strong>{{ app.user.username }}</strong>.
+                        <a href="{{ path('fos_user_security_logout') }}">Log out</a>
+                    </p>
+                {% endif %}
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus risus libero, luctus eu lectus sed, viverra convallis leo.</p>
                 <p>Sed ac convallis erat, nec viverra leo. Suspendisse auctor lobortis ante, euismod rhoncus magna feugiat a.</p>
                 <p>Suspendisse mi mauris, euismod id enim vel, rutrum volutpat nulla.</p>
