--- a/Resources/views/Account/show.html.twig
+++ b/Resources/views/Account/show.html.twig
@@ -19,53 +19,49 @@
             <thead>
                 <tr>
                     <th>Date</th>
+                    <th>Chk #</th>
                     <th>Vendor</th>
-                    <th>Description</th>
                     <th>Offset Account</th>
+                    <th>Description</th>
                     <th class="money">Credit</th>
                     <th class="money">Debit</th>
                     <th class="money">Balance</th>
-                    <th>Posted?</th>
                 </tr>
             </thead>
             <tbody>
                 {% for posting in account.postedPostings %}
                     <tr>
                         <td>{{ posting.journal.date|date('d M Y') }}</td>
+                        <td>{{ posting.journal.chequeNumber }}</td>
                         <td><a href="{{ path('pengarwin_vendor_show', { 'slug': posting.journal.vendor.slug}) }}">{{ posting.journal.vendor }}</a></td>
-                        <td>{{ posting.journal.description }}</td>
                         <td><a href="{{ path('pengarwin_account_show', { 'path': posting.offsetPosting.account.path }) }}">{{ posting.offsetPosting.account.segmentation }}</a></td>
+                        <td>{{ posting.journal.description }}</td>
                         <td class="money">{{ posting.creditAmount ? posting.creditAmount|number_format(2) : '' }}</td>
                         <td class="money">{{ posting.debitAmount ? posting.debitAmount|number_format(2) : '' }}</td>
                         <td class="money">{{ posting.calculatedBalance|number_format(2) }}</td>
-                        <td>Y</td>
                     </tr>
                 {% endfor %}
                 {% for posting in account.unpostedPostings %}
                     <tr>
                         <td>{{ posting.journal.date|date('d M Y') }}</td>
+                        <td>{{ posting.journal.chequeNumber }}</td>
                         <td><a href="{{ path('pengarwin_vendor_show', { 'slug': posting.journal.vendor.slug}) }}">{{ posting.journal.vendor }}</a></td>
-                        <td>{{ posting.journal.description }}</td>
                         <td><a href="{{ path('pengarwin_account_show', { 'path': posting.offsetPosting.account.path }) }}">{{ posting.offsetPosting.account.segmentation }}</a></td>
+                        <td>{{ posting.journal.description }}</td>
                         <td class="money">{{ posting.creditAmount ? posting.creditAmount|number_format(2) : '' }}</td>
                         <td class="money">{{ posting.debitAmount ? posting.debitAmount|number_format(2) : '' }}</td>
                         <td class="money">{{ posting.calculatedBalance|number_format(2) }}</td>
-                        <td>
-                            <form action="{{ path('pengarwin_journal_post', { 'path': account.path, 'id': posting.journal.id }) }}" method="post">
-                                <input type="submit" value="P" />
-                            </form>
-                        </td>
                     </tr>
                 {% endfor %}
                 {{ form_start(form) }}
                     <tr>
                         <td>{{ form_widget(form.date) }}</td>
+                        <td>{{ form_widget(form.chequeNumber) }}</td>
                         <td>{{ form_widget(form.proposedVendorName) }}</td>
-                        <td>{{ form_widget(form.description) }}</td>
                         <td>{{ form_widget(form.proposedOffsetAccountSegmentation) }}</td>
+                        <td>{{ form_widget(form.description) }}</td>
                         <td class="money">{{ form_widget(form.creditAmount) }}</td>
                         <td class="money">{{ form_widget(form.debitAmount) }}</td>
-                        <td></td>
                         <td>{{ form_widget(form.save) }}</td>
                     </tr>
                 {{ form_end(form) }}
