--- a/Resources/views/Account/show.html.twig
+++ b/Resources/views/Account/show.html.twig
@@ -26,6 +26,7 @@
                     <th class="money">Credit</th>
                     <th class="money">Debit</th>
                     <th class="money">Balance</th>
+                    <th></th>
                 </tr>
             </thead>
             <tbody>
@@ -51,6 +52,7 @@
                         <td class="money">{{ posting.creditAmount ? posting.creditAmount|number_format(2) : '' }}</td>
                         <td class="money">{{ posting.debitAmount ? posting.debitAmount|number_format(2) : '' }}</td>
                         <td class="money">{{ posting.calculatedBalance|number_format(2) }}</td>
+                        <td><a href="{{ path('pengarwin_journal_edit', { 'id': posting.journal.id }) }}">Edit</a></td>
                     </tr>
                 {% endfor %}
                 {{ form_start(form) }}
@@ -62,55 +64,11 @@
                         <td>{{ form_widget(form.description) }}</td>
                         <td class="money">{{ form_widget(form.creditAmount) }}</td>
                         <td class="money">{{ form_widget(form.debitAmount) }}</td>
+                        <td></td>
                         <td>{{ form_widget(form.save) }}</td>
                     </tr>
                 {{ form_end(form) }}
             </tbody>
         </table>
     </div><!-- .section -->
-<script>
-    $(function() {
-        $.ajax({
-            url: "/vendor.json",
-            dataType: "json",
-            success: function(data) {
-                $("#simple_journal_vendor").autocomplete({
-                    delay: 0,
-                    source: data,
-                    minlength: 0,
-                    select: function(event, ui)
-                    {
-                        $("#simple_journal_description").val(
-                            ui.item.defaultJournalDescription
-                        );
-                        $("#simple_journal_offsetAccount").val(
-                            ui.item.defaultOffsetAccount
-                        );
-                        $("#simple_journal_description").val(
-                            ui.item.defaultJournalDescription
-                        );
-                        $("#simple_journal_creditAmount").val(
-                            ui.item.defaultJournalCreditAmount
-                        );
-                        $("#simple_journal_debitAmount").val(
-                            ui.item.defaultJournalDebitAmount
-                        );
-                    }
-                });
-            }
-        });
-
-        $.ajax({
-            url: "/accounts.json",
-            dataType: "json",
-            success: function(data) {
-                $("#simple_journal_proposedOffsetAccountSegmentation").autocomplete({
-                    delay: 0,
-                    source: data,
-                    minlength: 0
-                });
-            }
-        });
-    });
-    </script>
 {% endblock %}
