--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -5,7 +5,7 @@
 
 
     {% if organization_handler.organization.chartOfAccounts %}
-        <p><a href="{{ path('pengarwin_account') }}">Accounts</a></p>
+        <p><a href="{{ path('phospr_account') }}">Accounts</a></p>
     {% endif %}
-    <p><a href="{{ path('pengarwin_vendor') }}">Vendors</a></p>
+    <p><a href="{{ path('phospr_vendor') }}">Vendors</a></p>
 {% endblock %}
