--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -2,10 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}PengarWin{% endblock %}</title>
+        <title>{% block title %}Phospr{% endblock %}</title>
         {% block stylesheets %}
             {% stylesheets
-                'bundles/pengarwincore/css/*'
+                'bundles/phosprcore/css/*'
                 'http://fonts.googleapis.com/css?family=Norican'
                 'http://fonts.googleapis.com/css?family=Oxygen:400,300,700'
                 'https://code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css'
@@ -21,7 +21,7 @@
     <body>
         <div id="dynamicMasthead" class="masthead main section">
             <div class="inner">
-                <div class="logo"><a href="{{ path('_homepage') }}">PengarWin</a></div>
+                <div class="logo"><a href="{{ path('_homepage') }}">Phospr</a></div>
             </div><!-- .inner -->
         </div><!-- #dynamicMasthead.masthead.main.section -->
         <div class="breadcrumbs main section">
