--- a/Resources/views/Account/show.html.twig
+++ b/Resources/views/Account/show.html.twig
@@ -64,8 +64,7 @@
                         <td>{{ form_widget(form.description) }}</td>
                         <td class="money">{{ form_widget(form.creditAmount) }}</td>
                         <td class="money">{{ form_widget(form.debitAmount) }}</td>
-                        <td></td>
-                        <td>{{ form_widget(form.save) }}</td>
+                        <td colspan="2">{{ form_widget(form.save) }}</td>
                     </tr>
                 {{ form_end(form) }}
             </tbody>
